[gd_scene load_steps=12 format=3 uid="uid://co52u63cyk220"]

[ext_resource type="Script" path="res://Scenes/System 3D/system_3d.gd" id="1_a351o"]
[ext_resource type="Shader" path="res://Scenes/pixelate_shader.gdshader" id="2_ra6gs"]
[ext_resource type="Shader" uid="uid://bqci5ex5ef2a6" path="res://Scenes/System 3D/sky_shader.tres" id="3_buwkt"]
[ext_resource type="FontFile" uid="uid://xrcqj2080elm" path="res://Graphics/Fonts/RobotoMono Medium.ttf" id="3_wi6mv"]
[ext_resource type="Script" path="res://Scenes/System 3D/control.gd" id="4_d6r1b"]
[ext_resource type="Texture2D" uid="uid://byp6pykkhwnpf" path="res://Graphics/Misc/star_backdrop.jpeg" id="4_rgh3c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7fqt"]
shader = ExtResource("2_ra6gs")
shader_parameter/pixel_size = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajtlq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
skew = Vector2(1, 0)
border_width_left = 20
border_color = Color(0.258824, 0.258824, 0.258824, 1)
expand_margin_left = 15.0
shadow_color = Color(0.207843, 0.207843, 0.207843, 0.6)
shadow_size = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ch2h2"]
shader = ExtResource("3_buwkt")
shader_parameter/source_panorama = ExtResource("4_rgh3c")

[sub_resource type="Sky" id="Sky_4kfpl"]
sky_material = SubResource("ShaderMaterial_ch2h2")

[sub_resource type="Environment" id="Environment_wo5s4"]
background_mode = 2
background_energy_multiplier = 0.75
sky = SubResource("Sky_4kfpl")
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.0
ambient_light_energy = 0.0
reflected_light_source = 1
tonemap_mode = 2
tonemap_exposure = 2.0

[node name="system_3d_window" type="SubViewport"]
canvas_item_default_texture_filter = 0
size = Vector2i(300, 300)

[node name="system_3d" type="Node3D" parent="."]
script = ExtResource("1_a351o")

[node name="camera_offset" type="Node3D" parent="system_3d"]

[node name="camera" type="Camera3D" parent="system_3d/camera_offset"]

[node name="canvas_layer" type="CanvasLayer" parent="system_3d/camera_offset/camera"]

[node name="post_process" type="ColorRect" parent="system_3d/camera_offset/camera/canvas_layer"]
texture_filter = 1
material = SubResource("ShaderMaterial_e7fqt")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="control" type="Control" parent="system_3d/camera_offset/camera/canvas_layer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_d6r1b")

[node name="locked_body_label" type="Label" parent="system_3d/camera_offset/camera/canvas_layer/control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_wi6mv")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_ajtlq")
vertical_alignment = 1

[node name="world_environment" type="WorldEnvironment" parent="system_3d"]
environment = SubResource("Environment_wo5s4")

[node name="star_omni_light" type="OmniLight3D" parent="system_3d"]
omni_range = 4096.0
